update notebook on Inception-ResNet-v2

--- a/notebooks/ExtractFeaturesInception.ipynb
+++ b/notebooks/ExtractFeaturesInception.ipynb
@@ -188,10 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 116,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Dimensions of the pictures\n",
@@ -200,7 +198,6 @@
     "channels = 3\n",
     "\n",
     "input_tensor = tf.placeholder(tf.float32, shape=(None,height,width,channels), name='input_image')\n",
-    "# scaled_input_tensor = preprocess_for_eval(input_tensor, height, width)\n",
     "scaled_input_tensor = tf.scalar_mul((1.0/255), input_tensor)\n",
     "scaled_input_tensor = tf.subtract(scaled_input_tensor, 0.5)\n",
     "scaled_input_tensor = tf.multiply(scaled_input_tensor, 2.0)"
@@ -210,6 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.2 Restore Session\n",
     "In this step, we load the Inception-ResNet-v2 model. Properly speaking, we **restore** the session."
    ]
   },
@@ -232,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define a dictionary containing human readable categories associated to each label."
+    "We define a dictionary containing human readable categories associated to each label. The original file was obtained from [here](https://gist.github.com/yrevar/6135f1bd8dcf2e0cc683)"
    ]
   },
   {
@@ -251,6 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2.3 Evaluate!\n",
     "Time to predict what classes our pictures belong to and obtain their features using Inception-ResNet-v2 model."
    ]
   },
@@ -332,6 +331,15 @@
     "    img_plot.axes.get_yaxis().set_ticks([])\n",
     "    img_plot.axes.get_xaxis().set_ticks([])\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO\n",
+    "1. Store output feature vectors as TFRecords ([ref1](https://kwotsin.github.io/tech/2017/01/29/tfrecords.html))\n",
+    "2. Integrate with resizing process"
    ]
   }
  ],
